✨ feat(add repository URL to package.json):

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "description": "Transform your text with ease! 🚀 Instantly switch between various formatting styles with our extension's context menu. Simply select your text and choose the desired format. Elegant texts, your way! 💡",
     "icon": "images/icon.png",
     "version": "1.0.0",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/EfeDeveloper/change-case-menu-vscode-ext.git"
+    },
     "publisher": "EdFerVIIIA",
     "engines": {
         "vscode": "^1.85.0"
