👷 chore(update package name to "text-case-changer-menu"):

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "text-case-changer",
+    "name": "text-case-changer-menu",
     "displayName": "Format Switcher",
     "description": "Transform your text with ease! 🚀 Instantly switch between various formatting styles with our extension's context menu. Simply select your text and choose the desired format. Elegant texts, your way! 💡",
     "icon": "images/icon.png",
